add react query

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@douyinfe/semi-ui": "^2.77.1",
     "@lexical/react": "^0.12.5",
     "@monaco-editor/react": "^4.7.0",
+    "@tanstack/react-query": "^5.81.5",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.8.2",
@@ -54,6 +55,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "orval": "^7.10.0",
     "postcss": "^8.4.32",
     "prettier": "3.2.5",
     "tailwindcss": "^4.0.14",
